docs/declarations.grammar
decl : varDecl
     | funDecl
     ;

funDecl : "fun" ID "(" NL? [funParams] NL? ")" "->" NL? type NL? multiStat
        | "fun" ID "(" NL? [funParams] NL? ")" ["->" NL? type] "=" NL? expr
        ;

funParams : [pFunParams "," NL?] dFunParams
          | pFunParams
          ;

pFunParams : [pFunParams "," NL?] ID ":" NL? type ;
dFunParams : [dFunParams "," NL?] ID [":" NL? type] "=" NL? expr ;

varDecl : storageKey? ("val" | "var") ID [":" NL? type] "=" NL? expr

storageKey : "static"
           | "auto"
           | "dynamic"
           ;

type : dataType
     | refType
     ;

refType : ("$" | "&" | "#") dataType ["?"] ;

dataType : ID ;

/*   DataTypes
     : "Bool" | "Char"  | "String"
     | "Int8" | "Int16" | "Int32"   | "Int64"   | "IntMax"
     | "Nat8" | "Nat16" | "Nat32"   | "Nat64"   | "NatMax"
                        | "Real32"  | "Real64"  | "RealMax"
                        | "Cplex32" | "Cplex64" | "CplexMax"
     | "Size"
     ;
*/
